Testing a fix to the phantom border issue on mobile. Making body's background be --background-color

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ html,
 body {
 	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
 		sans-serif;
-	background-color: black; /*var(--background-color);*/
+	background-color: var(--background-color);
 	color: var(--primary-color-light);
 }
 
